# Oreo-gem5

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
build_opts/: X86_MOESI_hammer
configs/example/gem5_library/: x86-ubuntu-run-example.py
scripts/: .gitignore  compile.py  extract_trace.py  gen_checkpoint.py  parse.py  parse_debug_trace.py  parse_debug_trace_gen_pc_trace.py  parse_perf.py  parse_perf_stats.py  parse_prefetch.py  parse_spec.py  parse_trace.py  performance_plot.py  performance_test.py  re_checkpoint.py  run_example.py  run_perf.py  run_sec.py  run_spec.py  run_test.py  security_test.py  simple_run.py  switch_simple.py  utils.py
scripts/plot/: lebench-final.csv  path1_000_0c.txt  path1_000_0d.txt  path1_111_0c.txt  path1_111_0d.txt  path2_000.txt  path2_111.txt
scripts/spec_cmd/500.perlbench_r/: cwd  mycmds.cmd  speccmds.cmd
scripts/spec_cmd/502.gcc_r/: cwd  mycmds.cmd  speccmds.cmd
scripts/spec_cmd/505.mcf_r/: cwd  mycmds.cmd  speccmds.cmd
scripts/spec_cmd/520.omnetpp_r/: cwd  mycmds.cmd  speccmds.cmd
scripts/spec_cmd/523.xalancbmk_r/: cwd  mycmds.cmd  speccmds.cmd
scripts/spec_cmd/525.x264_r/: cwd  mycmds.cmd  speccmds.cmd
scripts/spec_cmd/531.deepsjeng_r/: cwd  mycmds.cmd  speccmds.cmd
src/base/: trace.cc  trace.hh
src/cpu/: BaseCPU.py  base.cc  base.hh  exec_context.hh  simple_thread.hh  static_inst.hh  thread_context.cc  thread_context.hh
src/mem/: request.hh
src/python/: importer.py
src/sim/: System.py  Workload.py  eventq.hh  kernel_workload.cc  kernel_workload.hh  pseudo_inst.cc  system.cc  system.hh
(+78 files in other folders)
