[tool.black]
line-length = 79
include = '\.pyi?$'
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
force_grid_wrap = 2
known_m5 = "m5"
known_underscore_m5 = "_m5,slicc"
known_gem5 = "gem5"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,M5,UNDERSCORE_M5,GEM5,LOCALFOLDER"

[tool.poetry]
name = "protect-kaslr"
version = "0.1.0"
description = ""
authors = ["zhizhuoxin <shixins@umich.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
scons = "^4.5.2"
click = "^8.1.4"
numpy = "^1.25.2"
seaborn = "^0.13.0"
arrow = "^1.3.0"
tenacity = "^8.2.3"
strenum = "^0.4.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
